selectors all working

--- a/test-site/index.html
+++ b/test-site/index.html
@@ -103,6 +103,15 @@
           </p>
         </div>
 
+        <div class="card">
+          <h3>Card System</h3>
+          <p>Tests nested selector scenarios with multiple identical product cards containing the same button labels and structure.</p>
+          <a href="pages/card-system.html" class="btn">Go to Page</a>
+          <p class="text-secondary" style="margin-top: 0.5rem; font-size: 0.875rem;">
+            <strong>Tests:</strong> Nested selectors, parent-child relationships, disambiguation
+          </p>
+        </div>
+
       </div>
     </section>
 
