--- a/test-site/pages/buttons-variety.html
+++ b/test-site/pages/buttons-variety.html
@@ -125,29 +125,29 @@
     };
 
     // Apply variations to button text
-    initVariations({
-      buttons: {
-        '.primary-btn': randomChoice([
-          ['Click Me', 'Press Here', 'Click This', 'Tap Me'],
-          ['Submit', 'Send', 'Go', 'Continue'],
-          ['Save Changes', 'Save', 'Store', 'Keep Changes'],
-          ['Cancel', 'Abort', 'Close', 'Dismiss'],
-          ['Delete', 'Remove', 'Erase', 'Clear']
-        ]),
-        '.similar-btn': randomChoice([
-          ['Save', 'Store', 'Keep'],
-          ['Save Draft', 'Save as Draft', 'Store Draft'],
-          ['Save and Continue', 'Save & Continue', 'Save then Continue'],
-          ['Save and Exit', 'Save & Exit', 'Save then Exit']
-        ])
-      },
-      elementText: {
-        'h2': {
-          text: ['Buttons with Text Labels', 'Text Buttons', 'Labeled Buttons', 'Standard Buttons'],
-          count: 1
-        }
-      }
-    });
+    // initVariations({
+    //   buttons: {
+    //     '.primary-btn': randomChoice([
+    //       ['Click Me', 'Press Here', 'Click This', 'Tap Me'],
+    //       ['Submit', 'Send', 'Go', 'Continue'],
+    //       ['Save Changes', 'Save', 'Store', 'Keep Changes'],
+    //       ['Cancel', 'Abort', 'Close', 'Dismiss'],
+    //       ['Delete', 'Remove', 'Erase', 'Clear']
+    //     ]),
+    //     '.similar-btn': randomChoice([
+    //       ['Save', 'Store', 'Keep'],
+    //       ['Save Draft', 'Save as Draft', 'Store Draft'],
+    //       ['Save and Continue', 'Save & Continue', 'Save then Continue'],
+    //       ['Save and Exit', 'Save & Exit', 'Save then Exit']
+    //     ])
+    //   },
+    //   elementText: {
+    //     'h2': {
+    //       text: ['Buttons with Text Labels', 'Text Buttons', 'Labeled Buttons', 'Standard Buttons'],
+    //       count: 1
+    //     }
+    //   }
+    // });
   </script>
 </body>
 </html>
