--- a/test-site/pages/layout-complex.html
+++ b/test-site/pages/layout-complex.html
@@ -167,6 +167,12 @@
   </div>
 
   <style>
+    /* Use existing layer order from main CSS: base, components, utilities, overrides */
+    /* Add animations as a new layer that comes after components */
+    @layer animations;
+    
+    /* Component-specific styles for this page - uses components layer from main CSS */
+    @layer components {
     .dropdown {
       position: absolute;
       top: 100%;
@@ -214,6 +220,11 @@
       padding: 2rem;
       border-radius: var(--border-radius);
       text-align: center;
+      max-width: 90%;
+      max-height: 90vh;
+      overflow-y: auto;
+      margin: 2rem;
+      box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
     }
 
     .spinner {
@@ -225,11 +236,15 @@
       animation: spin 1s linear infinite;
       margin: 0 auto 1rem;
     }
+    } /* End components layer */
 
+    /* Animations layer - keyframes */
+    @layer animations {
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
+    } /* End animations layer */
   </style>
 
   <script type="module">
